--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.lovejava</groupId>
+	<groupId>com.tistory.f5074</groupId>
 	<artifactId>emt</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
@@ -51,13 +51,13 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-     	<!-- 추가 시작 -->
+     	<!-- Add repository -->
 		<repository>
 			<id>oracle</id>
 			<name>Oracle JDBC repository</name>
 			<url>http://maven.jahia.org/maven2</url>
 		</repository>
-		<!-- 추가 끝 -->
+		
 	</repositories>
 
 	<dependencies>
@@ -119,6 +119,68 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		
+		<!-- ojdbc download and local settings  -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.2</version>
+			<scope>system</scope>
+			<systemPath>C:/Users/f5074/Downloads/ojdbc6-12.1.0.2.jar</systemPath>
+		</dependency>
+		
+		<!-- mybatis-spring -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
+        
+		<!-- jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<!-- log4j -->
+		<dependency>
+     	 	<groupId>log4j</groupId>
+      		<artifactId>log4j</artifactId>
+      		<version>1.2.14</version>
+      		<scope>runtime</scope>
+   		</dependency>
+	
+		<!-- Mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>	
+		
+		<!-- file upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+		<!-- Jackson Json Mapper -->
+		 <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.10.0.pr3</version>
+		</dependency>
         
         <!-- mysql이나 oracle DB 사용시 아래 설정 추가  
         <dependency>
@@ -153,69 +215,6 @@
             <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc-14.jar</systemPath>
         </dependency>
         -->
-		<dependency>
-		    <groupId>org.mybatis</groupId>
-		    <artifactId>mybatis</artifactId>
-		    <version>3.4.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.mybatis</groupId>
-		    <artifactId>mybatis-spring</artifactId>
-		    <version>1.3.0</version>
-		</dependency>
-        
-		<!-- jstl -->
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<!-- jstl -->
-				<!-- log4j 추가 -->
-		<dependency>
-     	 	<groupId>log4j</groupId>
-      		<artifactId>log4j</artifactId>
-      		<version>1.2.14</version>
-      		<scope>runtime</scope>
-   		</dependency>
-		<!-- 추가 끝 -->
-	
-		<!-- 추가 시작 -->
-		<!-- 메일 -->
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<!-- 메일 끝 -->
-		<!-- mybatis-spring -->
-
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>12.1.0.2</version>
-			<scope>system</scope>
-			<systemPath>C:/Users/f5074/Downloads/ojdbc6-12.1.0.2.jar</systemPath>
-		</dependency>
-		<!-- file upload -->
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-		<!-- 추가 끝 -->
-
-		<!-- Jackson Json Mapper -->
-		 <dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.10.0.pr3</version>
-		</dependency>
 	</dependencies>
 
 	<build>
